--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env webpack --config ./webpack.config.prod.babel.js",
-    "postinstall": "npm install -g babel-cli@6.26.0 cross-env@5.0.5 webpack@3.6.0",
+    "postinstall": "npm install -g babel-cli@7.0.0-beta.3 cross-env@5.0.5 webpack@3.6.0",
     "start": "npm run start-prod",
     "start-dev": "cross-env NODE_ENV=development babel-node server --useServerRender=true --useLiveData=false",
     "start-prod": "npm run build && cross-env NODE_ENV=production babel-node server --useServerRender=true --useLiveData=false"
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
+    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
@@ -24,16 +25,16 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-regenerator-runtime": "^6.5.0",
     "copy-webpack-plugin": "^4.1.1",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.2.0",
     "express": "^4.16.1",
     "express-yields": "^1.1.1",
     "fs-extra": "^4.0.2",
-    "history": "^4.7.2",
+    "history": "^4.9.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "optimist": "^0.6.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-markdown": "^2.5.0",
     "react-redux": "^5.0.6",
@@ -44,8 +45,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.15.6",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "webpack": "^3.6.0",
+    "request-promise": "^4.2.4",
+    "webpack": "^3.12.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
   }
